--- a/gateway-servicec/pom.xml
+++ b/gateway-servicec/pom.xml
@@ -60,6 +60,9 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
         </dependency>
+             <properties>
+                    <sonar.organization>bones0xab</sonar.organization>
+             </properties>
     </dependencies>
     <dependencyManagement>
         <dependencies>
